--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-connect": "^1.0.2",
     "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "latest",
+    "grunt-contrib-cssmin": "^2.0.0",
     "grunt-contrib-handlebars": "^1.0.0",
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-less": "latest",
