--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
   "name": "movement",
   "version": "2.0.0",
+  "scripts": {
+    "build": "webpack"
+  },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.0",
     "bower": "",
     "eslint": "^4.1.1",
     "grunt": "*",
