--- a/package.json
+++ b/package.json
@@ -1,28 +1,32 @@
 {
-  "name": "movement",
-  "version": "2.0.0",
-  "devDependencies": {
-    "bower": "",
-    "eslint": "^4.1.1",
-    "grunt": "*",
-    "grunt-assemble": "^0.5.0",
-    "grunt-concurrent": "^2.3.1",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-concat": "^1.0.1",
-    "grunt-contrib-connect": "^1.0.2",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^2.0.0",
-    "grunt-contrib-handlebars": "^1.0.0",
-    "grunt-contrib-less": "latest",
-    "grunt-contrib-uglify": "^2.1.0",
-    "grunt-contrib-watch": "latest",
-    "grunt-include-source": "^1.0.0",
-    "grunt-ng-annotate": "^3.0.0",
-    "grunt-open": "^0.2.3",
-    "gruntify-eslint": "^4.0.0",
-    "handlebars": "^4.0.5",
-    "jit-grunt": "^0.10.0",
-    "load-grunt-config": "^0.19.2",
-    "webpack": "^3.5.5"
-  }
+	"name": "movement",
+	"version": "2.0.0",
+	"devDependencies": {
+		"bower": "^1.8.2",
+		"eslint": "^4.1.1",
+		"grunt": "^1.0.1",
+		"grunt-assemble": "^0.5.0",
+		"grunt-cli": "^1.2.0",
+		"grunt-concurrent": "^2.3.1",
+		"grunt-contrib-clean": "^1.0.0",
+		"grunt-contrib-concat": "^1.0.1",
+		"grunt-contrib-connect": "^1.0.2",
+		"grunt-contrib-copy": "^1.0.0",
+		"grunt-contrib-cssmin": "^2.0.0",
+		"grunt-contrib-handlebars": "^1.0.0",
+		"grunt-contrib-less": "latest",
+		"grunt-contrib-uglify": "^2.1.0",
+		"grunt-contrib-watch": "latest",
+		"grunt-include-source": "^1.0.0",
+		"grunt-ng-annotate": "^3.0.0",
+		"grunt-open": "^0.2.3",
+		"gruntify-eslint": "^4.0.0",
+		"handlebars": "^4.0.5",
+		"jit-grunt": "^0.10.0",
+		"load-grunt-config": "^0.19.2",
+		"webpack": "^3.5.5"
+	},
+	"scripts": {
+		"build": "grunt"
+	}
 }
